--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" href="">
     <link rel="stylesheet" href="bower-libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="lib/highlight.js/styles/railscasts.css"/>
+    <link rel="stylesheet" href="lib/highlight.js/styles/atelier-lakeside.dark.css"/>
     <script src="lib/highlight.js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <!-- Scripts -->
@@ -57,19 +57,48 @@
         <div class="control-group tab-pane active" id="codeInput">
             <label for="inputCode" class="control-label">Code</label>
 
-            <div class="controls">
-                <textarea name="inputCode" id="inputCode" cols="100" rows="20" class="input"></textarea>
+            <!--<div class="controls">
+                <textarea name="inputCode" id="inputCode" cols="100" rows="20" class="input">-->
+                	<pre style="text-align:left;">
+                    	<code class="javascript">
+/**
+ * Allows changing object classes, requires the ID of the object
+ * @param {String} id     The ID of the object whose class will be modified
+ * @param {String} nclass The name of the new class for the object
+ */
+function setClassName(id, nclass) {
+  "use strict";
+  var e = document.getElementById(id);
+  e.className = nclass;
+}
 
-                <pre>
-                    <code class="javascript">
-                        function todo(){
-                        console.log("I need to be worked by LASCARIO");
-                        }
-                    </code>
-                </pre>
-                <a href="https://highlightjs.org/">LASCARIO CLICK ME!</a>
+/**
+ * Shows a tab, given its ID
+ * @param {String} tab The ID of the tab element
+ */
+function showTab(tab) {
+  "use strict";
+  setClassName(tab, 'control-group tab-pane active');
+}
+
+/**
+ * Hides a tab, given its ID
+ * @param {String} tab The ID of the tab element
+ */
+function hideTab(tab) {
+  "use strict";
+  setClassName(tab, 'control-group tab-pane');
+}
+
+function showOutputDialog() {
+  "use strict";
+  document.getElementById('outputcontent').showModal();
+}
+                    	</code>
+                	</pre>
+                <!--</textarea>-->
                 <span class="help-block">Paste your JS in the area above</span>
-            </div>
+            <!--</div>-->
             <div class="control-group tab-pane active" id="fileInput">
                 <div id="file_input_wrapper" class="well">
                     <input class="input" type="file">
