Now the RAW CODE area and FORMATTED CODE area share a common scroll top value. This means that when you toggle between the views, you don't have to scroll all the way down to where you were before hitting the toggle button.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 					<pre id="formattedCode" class="javascript hljs">
 					</pre>
 				</div>
-				<textarea oninput="updateFormattedCode();" name="rawCode" id="rawCode" rows="10" cols="100" onchange="setClassName('generateButton', 'btn btn.primary btn-large');"></textarea>
+				<textarea name="rawCode" id="rawCode" rows="10" cols="100" onchange="setClassName('generateButton', 'btn btn.primary btn-large');"></textarea>
 
 				<span class="help-block">Paste your JS in the area above</span>
 				<!--</div>-->
