Changed an HTML element's ID from "file_input_wrapper" to "fileInputWrapper".

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 			</div>
 			
 			<div class="control-group tab-pane" id="fileInput">
-				<div id="file_input_wrapper" class="well">
+				<div id="fileInputWrapper" class="well">
 					<input id="fileInput" class="input" type="file">
 				</div>
 				<span class="help-block">Submit a file for processing; we'll take care of the rest :)</span>
