Still making progress with integrating the documentation forms. Added a few more event bindings. If you double-click on the text area, the documentation menu will pop-up and let you select an option. It is still a bit buggy, though. Also, I'm thinking of a way to store the HTML elements' ID, so I don't have to hard-code them in my methods.

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 	</div>
 	
 	<!-- Documentation Forms -->
-    <div class="documentation-menu hidden">
+    <div id="docMenu" class="documentation-menu hidden">
         <h3>Documentación</h3>
         <button id="headerButton" class="documentation-button">Documentar Cabecera</button>
         <button id="methodButton" class="documentation-button">Documentar Método</button>
